# pptu

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.toml  install.py  pyproject.toml
pptu/: __init__.py  cli.py  constants.py  pptu.py  utils.py
pptu/uploaders/: __init__.py  _avistaznetwork.py  _base.py  avistaz.py  broadcasthenet.py  cinemaz.py  hdbits.py  ncore.py  nekobt.py  passthepopcorn.py  privatehd.py
pptu/utils/: __init__.py  anilist.py  click.py  collections.py  config.py  image.py  imdb.py  io.py  log.py  progress.py  regex.py  xml.py
