[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pptu"
description = "Python P2P Torrent Uploader"
version = "2025.12.31"
authors = [{ name = "pcroland" }, { name = "varyg" }]
requires-python = "<3.14,>=3.10"
dependencies = [
    "beautifulsoup4<5.0.0,>=4.12.3",
    "cinemagoer<2024.0.0,>=2023.5.1",
    "guessit<4.0.0,>=3.8.0",
    "httpx<1.0.0,>=0.27.0",
    "humanize<5.0.0,>=4.9.0",
    "langcodes<4.0.0,>=3.4.0",
    "lxml<6.0.0,>=5.2.2",
    "platformdirs<5.0.0,>=4.2.2",
    "pymediainfo<8.0.0,>=7.0.0",
    "pyotp<3.0.0,>=2.9.0",
    "pyoxipng<10.0.0,>=9.0.0",
    "pyrosimple<3.0.0,>=2.14.0",
    "rich<15.0.0,>=14.0.0",
    "toml<1.0.0,>=0.10.2",
    "torf<5.0.0,>=4.2.7",
    "Wand<1.0.0,>=0.6.13",
    "cloup<4.0.0,>=3.0.7",
    "niquests>=3.15.2",
    "ordered-set<5.0.0,>=4.1.0",
    "orjson>=3.11.3",
    "beaupy>=3.10.2",
]


[project.scripts]
pptu = "pptu.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "isort<6.0.0,>=5.10.1",
    "ruff<1.0.0,>=0.14.0",
    "ty<1.0.0,>=0.0.8",
    "mypy<2.0,>=1.17",
    "pep8-naming<1.0.0,>=0.13.2",
    "pre-commit<4.0.0,>=3.0.0",
    "pyupgrade<3.0.0,>=2.37.3",
    "types-attrs<20.0.0,>=19.1.0",
    "types-beautifulsoup4<5.0.0,>=4.11.6",
    "types-requests<3.0.0,>=2.28.10",
    "types-toml<1.0.0,>=0.10.8",
    "unify<1.0,>=0.5",
    "vulture<3.0,>=2.6",
    "yesqa<2.0.0,>=1.4.0",
]


[tool.isort]
classes = ["IO", "PPTU"]
line_length = 120
lines_after_imports = 2
profile = "black"

[tool.mypy]
exclude = [".venv"]
python_version = "3.10"
show_error_codes = true
strict = true
disallow_untyped_calls = false
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = "guessit"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "imdb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymediainfo"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyrosimple.util.metafile"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torf"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wand.image"
ignore_missing_imports = true

[tool.vulture]
paths = ["."]
exclude = [".venv/"]
min_confidence = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 90
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
